--- a/index.html
+++ b/index.html
@@ -5,34 +5,35 @@
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Octubre Web</title>
+  <title>Portal de afiliados</title>
 
   <meta name="description" content="Administración Octubre">
 
   
   <!-- Configured Head Tags  -->
-  <link rel="apple-touch-icon" sizes="57x57" href="/assets/icon/apple-icon-57x57.png">
-	<link rel="apple-touch-icon" sizes="60x60" href="/assets/icon/apple-icon-60x60.png">
-	<link rel="apple-touch-icon" sizes="72x72" href="/assets/icon/apple-icon-72x72.png">
-	<link rel="apple-touch-icon" sizes="76x76" href="/assets/icon/apple-icon-76x76.png">
-	<link rel="apple-touch-icon" sizes="114x114" href="/assets/icon/apple-icon-114x114.png">
-	<link rel="apple-touch-icon" sizes="120x120" href="/assets/icon/apple-icon-120x120.png">
-	<link rel="apple-touch-icon" sizes="144x144" href="/assets/icon/apple-icon-144x144.png">
-	<link rel="apple-touch-icon" sizes="152x152" href="/assets/icon/apple-icon-152x152.png">
-	<link rel="apple-touch-icon" sizes="180x180" href="/assets/icon/apple-icon-180x180.png">
-	<link rel="icon" type="image/png" sizes="192x192" href="/assets/icon/android-icon-192x192.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="/assets/icon/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="96x96" href="/assets/icon/favicon-96x96.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="/assets/icon/favicon-16x16.png">
+  <link rel="apple-touch-icon" sizes="57x57" href="assets/icon/apple-icon-57x57.png">
+	<link rel="apple-touch-icon" sizes="60x60" href="assets/icon/apple-icon-60x60.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="assets/icon/apple-icon-72x72.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="assets/icon/apple-icon-76x76.png">
+	<link rel="apple-touch-icon" sizes="114x114" href="assets/icon/apple-icon-114x114.png">
+	<link rel="apple-touch-icon" sizes="120x120" href="assets/icon/apple-icon-120x120.png">
+	<link rel="apple-touch-icon" sizes="144x144" href="assets/icon/apple-icon-144x144.png">
+	<link rel="apple-touch-icon" sizes="152x152" href="assets/icon/apple-icon-152x152.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="assets/icon/apple-icon-180x180.png">
+	<link rel="icon" type="image/png" sizes="192x192" href="assets/icon/android-icon-192x192.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="assets/icon/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="96x96" href="assets/icon/favicon-96x96.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="assets/icon/favicon-16x16.png">
 	<meta name="msapplication-TileColor" content="#ffffff">
-	<meta name="msapplication-TileImage" content="/assets/icon/ms-icon-144x144.png">
+	<meta name="msapplication-TileImage" content="assets/icon/ms-icon-144x144.png">
 	<meta name="theme-color" content="#4691d1">
   
 
   <!-- base url -->
-  <base href="./">
+  <base href="/">
 
-<link href="initial.css" rel="stylesheet"></head>
+
+<link href="initial.css" rel="stylesheet"><script src="polyfills.19da1129566c3d03eb94.bundle.js" type="text/javascript" defer></script><script src="vendor.9ea3d95c80707070658b.bundle.js" type="text/javascript" defer></script><script src="main.c1a52eb0b31ee755de88.bundle.js" type="text/javascript" defer></script></head>
 
 <body>
 <app>
@@ -47,5 +48,5 @@
 <link
   href='https://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900italic,900&subset=latin,greek,greek-ext,vietnamese,cyrillic-ext,latin-ext,cyrillic'
   rel='stylesheet' type='text/css'>
-<script type="text/javascript" src="polyfills.5ae6412bc7f67968223d.bundle.js"></script><script type="text/javascript" src="vendor.dba7b775ac91c8c784c5.bundle.js"></script><script type="text/javascript" src="main.ed8f1c491cbb5d5c218e.bundle.js"></script></body>
+</body>
 </html>
