con import de quagga

--- a/pwa/index.html
+++ b/pwa/index.html
@@ -27,7 +27,7 @@
   </script>-->
 
   <link href="build/main.css" rel="stylesheet">
-  <script src="build/quagga.min.js"></script>
+  <!-- <script src="build/quagga.min.js"></script> -->
 </head>
 <body>
 
